## [1.0-RC5] 2016-02-24 Yuri Katkov
## removed the data_type field
## [1.0-RC4] 2016-02-24 Catherine Zwahlen / Yuri Katkov

### Added fields
- schema_version to specify the version in the SAM json file

## [1.0-RC3] 2016-02-03 Samuel Kerrien / Yuri Katkov

### Updated fields
- Updated file names to Single Activity Metadata (SAM)
- Updated javaType attributes to reflect java packages changes
- specimen.name is no longer a mandatory field (decision is made after the discussion with Sean 1.2.2016). The reason to make it optional is that we consider the name of the specimen to be an internal id of the lab, which is unnesessary to expose.  We also decided that the "search by specimen name" use case is not our priority.
- definitions/organisation/name is now the required field

#### Added fields
- dataset.protocol describes the protocol and its name with optional id in the database
- dataset.datatype is brought back. Probably it was removed by a mistake in the previous versions.
- registration/contributors/laboratory describes the laboratory (section, team, group) inside the organisation

#### Removed fields
- registration.description is removed because it has duplicated usage with dataset.description
- dataset.protocol_description is removed in favor to dataset.protocol (see Added fields)

## [1.0-RC2] 2016-01-28 Samuel Kerrien / Yuri Katkov
- Updated schema version to 1.0-RC2
- Added a number of "additionalProperties": false to prevent random attributes be added
- Added id attribute to organisation, contributor and software
- Added list of roles to contributor
- Added single optional organisation to contributor (the contributor can be repeated if it is affiliated to multiple organisations)

## [1.0-RC1] 2016-01-07 Yuri Katkov
- Initial schema